--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -1,11 +1,10 @@
 steps:
-  # Remove this for now.
-  # prettier_check:
-  #   image: tmknom/prettier:3.2.5
-  #   commands:
-  #     - prettier -c .
-  #   when:
-  #     - event: pull_request
+  prettier_check:
+    image: jauderho/prettier:3.7.3-alpine
+    commands:
+      - prettier -c .
+    when:
+      - event: pull_request
 
   notify_success:
     image: alpine:3
